# monthly_file_diff

./: Cargo.toml  ReadMe.md  deny.toml
TestData/参照2024_12月データ/Main/: InTheBox12-2024.xlsx
TestData/参照2024_12月データ/Main/Sub/: SubFile1_12-2024.txt  SubFile2_12-2024.txt
TestData/参照2025_01月データ/Main/: InTheBox01-2025.xlsx
src/: lib.rs  main.rs
templates/: report.html
tests/: encoding_tests.rs  integration_tests.rs  test_fixtures.rs  unit_tests.rs
