[package]
name = "monthly_file_diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1.11.1"
walkdir = "2.4"
encoding_rs = "0.8"
encoding_rs_rw = "0.4" 